--- a/exercise-1/Jenkinsfile
+++ b/exercise-1/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
             stage("Hello"){
                 agent {docker { image 'python:3-alpine3.13' }}
                 steps{
+		    sh 'pip3 install requests'
                     sh 'python3 src/hello.py'
                 }
             }
